--- a/TFG_MetodosEstadisticosBaloncesto.Rnw
+++ b/TFG_MetodosEstadisticosBaloncesto.Rnw
@@ -276,7 +276,10 @@ library(graphics)
 library(rpart)
 library(ggplot2)
 library(car)                   # VIF
+@
 
+
+<<include=FALSE, echo=FALSE>>=
 #ERROR SOLUCION
 pbp_2008 <- read_csv("pbp2008.csv")
 
@@ -333,209 +336,93 @@ pbp_2017_fixed <- split(pbp_2017, factor(pbp_2017$game_code)) %>%
 
 pbp_2018 <- read_csv("pbp2018.csv")
 pbp_2018_fixed <- split(pbp_2018, factor(pbp_2018$game_code)) %>%
-  map_df(fix_lineups) 
+  map_df(fix_lineups)
+@
 
-pbd_datos_fixed <- pbp_2008_fixed
 
-factor_names <- c('season', 'game_code', 'team_code', 'play_number', 'play_type')
-pbd_datos_fixed[,factor_names] <- lapply(pbd_datos_fixed[,factor_names] , factor)
+Seleccionamos a partir de 2011 porque la variable "seconds" esta mal definida en los años anteriores, ya que no son segundos sino minutos y por lo tanto hay varias acciones en el mismo momento exacto del partido, cosa que no puede ser factible.
 
-summary(pbd_datos_fixed[1:18])
+<<include=FALSE, echo=FALSE>>=
+source(here("R", "dummys_fun.R"))
+df_dummys_2011 <- dummys_fun(pbp_2011_fixed)
+df_dummys_2012 <- dummys_fun(pbp_2012_fixed)
+df_dummys_2013 <- dummys_fun(pbp_2013_fixed)
+df_dummys_2014 <- dummys_fun(pbp_2014_fixed)
+df_dummys_2015 <- dummys_fun(pbp_2015_fixed)
+df_dummys_2017 <- dummys_fun(pbp_2017_fixed)
+df_dummys_2018 <- dummys_fun(pbp_2018_fixed)
 
-#CATEGORIZACION BBDD
-df <- pbd_datos_fixed
-N_df <- dim(df)[1] # Numero de jugadas
-M_df <- dim(df)[2] # Numero de variables
+write.csv(df_dummys_2011,"C:\\Users\\paula\\Documents\\GitHub\\TFG-Baloncesto2\\Dummys\\dummys_2011.csv", row.names = FALSE)
+write.csv(df_dummys_2012,"C:\\Users\\paula\\Documents\\GitHub\\TFG-Baloncesto2\\Dummys\\dummys_2012.csv", row.names = FALSE)
+write.csv(df_dummys_2013,"C:\\Users\\paula\\Documents\\GitHub\\TFG-Baloncesto2\\Dummys\\dummys_2013.csv", row.names = FALSE)
+write.csv(df_dummys_2014,"C:\\Users\\paula\\Documents\\GitHub\\TFG-Baloncesto2\\Dummys\\dummys_2014.csv", row.names = FALSE)
+write.csv(df_dummys_2015,"C:\\Users\\paula\\Documents\\GitHub\\TFG-Baloncesto2\\Dummys\\dummys_2015.csv", row.names = FALSE)
+write.csv(df_dummys_2016,"C:\\Users\\paula\\Documents\\GitHub\\TFG-Baloncesto2\\Dummys\\dummys_2016.csv", row.names = FALSE)
+write.csv(df_dummys_2017,"C:\\Users\\paula\\Documents\\GitHub\\TFG-Baloncesto2\\Dummys\\dummys_2017.csv", row.names = FALSE)
+write.csv(df_dummys_2018,"C:\\Users\\paula\\Documents\\GitHub\\TFG-Baloncesto2\\Dummys\\dummys_2018.csv", row.names = FALSE)
+@
 
-df_fact <- df %>%
-  select(season, game_code, team_code, player_name, team_name) %>%
-  mutate(season = as.factor(season),
-         team_code = as.factor(team_code),
-         player_name = as.factor(player_name),
-         team_name = as.factor(team_name))
 
-num_teams <- length(levels(df_fact$team_name)) # Numero de equipos
+<<include=FALSE, echo=FALSE>>=
+#dummys_2011 <- read_csv("Dummys/dummys_2011.csv") #PROBLEMAS
+#dummys_2012 <- read_csv("Dummys/dummys_2012.csv") #PROBLEMAS
+dummys_2013 <- read_csv("Dummys/dummys_2013.csv")
+dummys_2014 <- read_csv("Dummys/dummys_2014.csv")
+dummys_2015 <- read_csv("Dummys/dummys_2015.csv")
+dummys_2017 <- read_csv("Dummys/dummys_2017.csv")
+dummys_2018 <- read_csv("Dummys/dummys_2018.csv")
 
-players <- df %>% 
-  select(matches("player_name")) %>%
-  arrange(player_name) %>% 
-  unique() %>% 
-  drop_na()
+N_rows <- nrow(dummys_2013)+nrow(dummys_2014)+nrow(dummys_2015)+nrow(dummys_2017)+nrow(dummys_2018)
+@
 
-players <- players$player_name
-num_players <- length(players)   # Numero de jugadores
+<<>>=
+#players_2011 <- colnames(dummys_2011)[-c(1:5)]
+#players_2012 <- colnames(dummys_2012)[-c(1:5)]
+players_2013 <- colnames(dummys_2013)[-c(1:5)]
+players_2014 <- colnames(dummys_2014)[-c(1:5)]
+players_2015 <- colnames(dummys_2015)[-c(1:5)]
+players_2017 <- colnames(dummys_2017)[-c(1:5)]
+players_2018 <- colnames(dummys_2018)[-c(1:5)]
 
-df_pbp <- df %>% 
-  select(season, game_code, quarter, seconds, points_home, points_away, home_team, away_team, matches("_player[1-5]"))
-
-CHR_to_seconds <- function(x){
-  a <- as.POSIXct(x, tz = '', format = "%H:%M:%S", usetz = FALSE)
-  tms <- secondss(format(a, "%H:%M:%S"))
-  s <- period_to_seconds(hms(tms))
-  return(s)
-}
-
-Print_MS <- function(x){
-  t <- seconds_to_period(x)
-  sprintf('%02d:%02d:%02d', t@hour, minute(t), second(t))
-}
-
-TP_home <- df_pbp %>%
-  select(c(contains("home_"))) %>%
-  unique()
-
-TP_away <- df_pbp %>%
-  select(c(contains("away_"))) %>%
-  unique()
-
-CBIND_MultipleCol_n <- function(data,col,n){
-  d <- unlist(data[col])
-  x <- cbind(rep(d, n))
-  y <- unlist(data[-1])
-
-  res <- cbind(x, y)
-  rownames(res) <- NULL
-  
-  res <- unique(res)
-  
-  return(res)
-}
-
-TeamPlayers_home <- CBIND_MultipleCol_n(TP_home, 1, 5)
-TeamPlayers_away <- CBIND_MultipleCol_n(TP_away, 1, 5)
-
-TeamPlayers <- rbind(TeamPlayers_home, TeamPlayers_away) %>%
+players <- c(players_2013, players_2014, players_2015, players_2017, players_2018) %>%
   as.data.frame() %>%
-  `colnames<-`(c("Team", "Player")) %>%
-  arrange(Team) %>%
+  arrange(".") %>%
   unique()
 
-Players_Sorted_byTeam <- TeamPlayers$Player
+players_vec <- players$.
+@
 
-Lineups_PasteSort <- function(x) {
-  paste(sort(x), collapse = " - ")
-}
+<<>>=
+df_dummys <- dplyr::bind_rows(dummys_2013, dummys_2014, dummys_2015, dummys_2017, dummys_2018) %>%
+  mutate_all(~replace(., is.na(.), 0))
 
-lineup_home <- df_pbp %>% select(contains("home_p"))
-lineup_away <- df_pbp %>% select(contains("away_p"))
-lineups     <- cbind(lineup_home, lineup_away)
+#Check
+is.na(df_dummys) %>% sum()
 
-lineup_home_sorted <- apply(lineup_home, 1, Lineups_PasteSort)
-lineup_away_sorted <- apply(lineup_away, 1, Lineups_PasteSort)
-lineups_sorted     <- apply(lineups, 1, Lineups_PasteSort)
+#Check que no hemos perdido datos
+nrow(df_dummys) == N_rows
+@
 
-#lineups
-df_lineups_sorted <- df_pbp %>%
-  mutate(lineup = lineups_sorted,
-    lineup_home = lineup_home_sorted,
-    lineup_away = lineup_away_sorted
-  ) %>% select(-contains("_player"))
 
-df_merged <- df_lineups_sorted %>%
-  mutate(game_code = paste0("G", str_pad(game_code, 6, pad = "0")), 
-                     quarter   = paste0("Q", quarter)) %>%
-  unite("SeasonGame", c("season", "game_code"))
-
-df_stints <- df_merged %>%
-  arrange(SeasonGame) %>%
-  mutate(StintChanged = (lineup != lag(lineup)),
-         StintChanged = replace_na(StintChanged, TRUE),
-         stint        = cumsum(StintChanged))
-
-df_reduced <- df_stints %>%
-  mutate(StintRemove  = (stint == lead(stint)),
-         StintRemove  = replace_na(StintRemove, FALSE)) %>%
-  filter(StintRemove != TRUE)
-
-PlusMinus_function <- function(h,a){
-  (h-lag(h))-(a-lag(a))
-}
-
-#Home como referencia
-df_PlusMinus <- df_reduced %>%
-  group_by(SeasonGame) %>%
-  mutate(
-    stint_seconds = ifelse(is.na(lag(seconds)), seconds, seconds - lag(seconds)),
-    PlusMinus  = ifelse(is.na(lag(seconds)), points_home - points_away,
-                       PlusMinus_function(points_home, points_away))
-  ) %>% ungroup()
-
-df_PlusMinus_reduced <- df_PlusMinus %>% 
-  select(c(SeasonGame, quarter, lineup, lineup_home, lineup_away, stint_seconds, PlusMinus)) 
-
-#Eliminar stints duplicados
-df_PlusMinus_reduced_bylineups <- df_PlusMinus_reduced %>% 
-  group_by(SeasonGame, quarter, lineup, lineup_home, lineup_away) %>% 
-  summarise(
-    stint_seconds = sum(stint_seconds),
-    PlusMinus  = sum(PlusMinus) ) %>% 
-  ungroup() %>%
-  as.data.frame()
-
-#10min
-df_dummys_H <- fastDummies::dummy_cols(df_PlusMinus_reduced_bylineups, 
-                                       select_columns = "lineup_home", 
-                                       split = "-")
-df_dummys_A <- fastDummies::dummy_cols(df_PlusMinus_reduced_bylineups, 
-                                       select_columns = "lineup_away", 
-                                       split = "-") %>% 
-                  mutate(across(starts_with("lineup_away_"), function(x) -x))
-
-Remove_firsts_chars_colnames <- function(data, char){
-  num_char <- nchar(char)+1
-  substring(names(data), num_char)
-}
-
-COL_From <- function(data, first_col){
-  last_col = ncol(data)
-  colnames(data[first_col:last_col])
-}
-
-COL_to <- function(data, first_col, char){
-  last_col = ncol(data)
-  Remove_firsts_chars_colnames(data[first_col:last_col], char)
-}
-
-#Primera columna con el nombre de un jugador
-match <- match(paste0("lineup_away_", players), names(df_dummys_A)) %>%
-            na.omit() %>%
-            min()
-
-#match = 8
-
-#nombre columnas sin primeras palabras:
-col_to_A <- COL_to(df_dummys_A, match, "lineup_away_")
-col_to_H <- COL_to(df_dummys_H, match, "lineup_home_")
-
-df_dummys_A <- df_dummys_A %>% rename_at(vars(COL_From(df_dummys_A,match)), function(x) col_to_A)
-df_dummys_H <- df_dummys_H %>% rename_at(vars(COL_From(df_dummys_H,match)), function(x) col_to_H)
-
-#Juntar los dos DF:
-df_dummys_A[df_dummys_A == 0] <- NA
-df_dummys_H[df_dummys_H == 0] <- NA
-
-df_dummys <- coalesce(df_dummys_H,df_dummys_A)
-df_dummys[is.na(df_dummys)] <- 0
-
-df_dummys <- df_dummys %>% select(-c(starts_with("lineup_"))) %>% ungroup()
-
+<<include=FALSE, echo=FALSE>>=
 df_dummys_PlusMinus <- df_dummys %>%
-  group_by(SeasonGame, quarter, lineup, stint_seconds) %>%
-  mutate(across(matches(players), function(x) x*PlusMinus)) %>%
+  group_by(SeasonGame, quarter) %>%
+  mutate(across(matches(players_vec), function(x) x*PlusMinus)) %>%
   select(-c(PlusMinus)) %>%
   ungroup()
 
 ### MasMenos de los mismos lineups (sin tener en cuenta SeasonGame o Quarter):
-
 df_dummys_PlusMinus_2 <- df_dummys_PlusMinus %>% select(-c(SeasonGame, quarter))
 
-PlusMinus_Lineups <- aggregate(. ~ lineup, df_dummys_PlusMinus_2, sum, na.rm = TRUE) %>%
+source(here("R", "Print_MS_fun.R"))
+
+#combinar mismos stints
+PlusMinus_Lineups <- df_dummys_PlusMinus_2 %>%
                      mutate(stint_seconds = Print_MS(stint_seconds))
 
-PlusMinus_Classic <- colSums(PlusMinus_Lineups[3:ncol(PlusMinus_Lineups)])
+PlusMinus_Classic <- colSums(PlusMinus_Lineups[5:ncol(PlusMinus_Lineups)])
 
 PlusMinus_Classic_df <- as.data.frame(PlusMinus_Classic)
-
 PlusMinus_Classic_df <- PlusMinus_Classic_df %>%
   mutate(Players = rownames(PlusMinus_Classic_df)) %>%
   arrange(Players) %>%
@@ -550,7 +437,7 @@ select(stint_seconds) %>%
   apply(1, function(x) x < 1) %>%
   sum()
 
-#2072 entrades amb seconds=0. Mal recogidos los datos. No se tiene en cuenta segundos reales, sino minutos (60,120, 180...). por lo que al hacer la resta con la jugada anterior aparece 0.
+#18183 entrades amb seconds=0. investigar!!!
 
 df_dummys2 <- df_dummys  
 df_dummys2$stint_seconds[df_dummys2$stint_seconds == 0] <- 30 
@@ -581,6 +468,11 @@ n <- dim(df_dummys_PlusMinus)[2]
 
 correlations <- round(cor(model.matrix(~.-1, data=df_dummys_PlusMinus[,match_firstplayer:n])), 5)
 @
+
+\textbf{RIDGE!!}
+
+
+
 
 
 \section{Análisis y métodos}
@@ -623,6 +515,8 @@ En este estudio vamos a analizar los datos de todas las jugadas registradas en p
 \clearpage
 
 \subsection{Code}
+
+URL GITHUB
 
 \textbf{Datos}
 
@@ -673,6 +567,32 @@ pbp_2009 <- read_csv("pbp2009.csv")
 pbp_2009_fixed <- split(pbp_2009, factor(pbp_2009$game_code)) %>%
   map_df(fix_lineups) 
 
+#ERROR SOLUCION
+pbp_2008 <- read_csv("pbp2008.csv")
+
+## Check how many rows are affected by this
+bad_lineups <- pbp_2008 %>%
+  select(matches("_player[1-5]")) %>%
+  apply(1, function(x) max(table(x)) > 1)
+
+pbp_bad <- pbp_2008 %>%
+  filter(bad_lineups)
+    
+pbp_bad %>%
+  select(season, game_code, play_number, play_type, away_player4, away_player5)
+    
+## Solucion
+source(here("R", "fix-lineups.R"))
+
+## Function fix_lineups() only takes data from a single game,
+## so I split the data and apply the function to each splitted data frame.
+pbp_2008_fixed <- split(pbp_2008, factor(pbp_2008$game_code)) %>%
+  map_df(fix_lineups) 
+
+pbp_2009 <- read_csv("pbp2009.csv")
+pbp_2009_fixed <- split(pbp_2009, factor(pbp_2009$game_code)) %>%
+  map_df(fix_lineups) 
+
 pbp_2010 <- read_csv("pbp2010.csv")
 pbp_2010_fixed <- split(pbp_2010, factor(pbp_2010$game_code)) %>%
   map_df(fix_lineups) 
@@ -703,14 +623,11 @@ pbp_2017_fixed <- split(pbp_2017, factor(pbp_2017$game_code)) %>%
 
 pbp_2018 <- read_csv("pbp2018.csv")
 pbp_2018_fixed <- split(pbp_2018, factor(pbp_2018$game_code)) %>%
-  map_df(fix_lineups) 
+  map_df(fix_lineups)
 
-pbd_datos_fixed <- pbp_2008_fixed
+pbp <- rbind(pbp_2008_fixed, pbp_2009_fixed, pbp_2010_fixed, pbp_2011_fixed, pbp_2012_fixed, pbp_2013_fixed, pbp_2014_fixed, pbp_2015_fixed, pbp_2017_fixed, pbp_2018_fixed)
 
-factor_names <- c('season', 'game_code', 'team_code', 'play_number', 'play_type')
-pbd_datos_fixed[,factor_names] <- lapply(pbd_datos_fixed[,factor_names] , factor)
-
-summary(pbd_datos_fixed[1:18])
+summary(pbd[1:18])
 @
 
 \textbf{Categorización y edición de BBDD}
@@ -769,288 +686,6 @@ Print_MS <- function(x){
 @
 
 \textbf{Lista Jugadores-Equipo}
-
-<<>>=
-TP_home <- df_pbp %>%
-  select(c(contains("home_"))) %>%
-  unique()
-
-TP_away <- df_pbp %>%
-  select(c(contains("away_"))) %>%
-  unique()
-
-CBIND_MultipleCol_n <- function(data,col,n){
-  d <- unlist(data[col])
-  x <- cbind(rep(d, n))
-  y <- unlist(data[-1])
-
-  res <- cbind(x, y)
-  rownames(res) <- NULL
-  
-  res <- unique(res)
-  
-  return(res)
-}
-
-TeamPlayers_home <- CBIND_MultipleCol_n(TP_home, 1, 5)
-TeamPlayers_away <- CBIND_MultipleCol_n(TP_away, 1, 5)
-
-TeamPlayers <- rbind(TeamPlayers_home, TeamPlayers_away) %>%
-  as.data.frame() %>%
-  `colnames<-`(c("Team", "Player")) %>%
-  arrange(Team) %>%
-  unique()
-
-Players_Sorted_byTeam <- TeamPlayers$Player
-@
-
-\textbf{Lineups}
-
-Se crea variable \emph{lineups} que recoge los quintetos de ambos equipos en pista.
-
-
-<<>>=
-Lineups_PasteSort <- function(x) {
-  paste(sort(x), collapse = " - ")
-}
-
-lineup_home <- df_pbp %>% select(contains("home_p"))
-lineup_away <- df_pbp %>% select(contains("away_p"))
-lineups     <- cbind(lineup_home, lineup_away)
-
-lineup_home_sorted <- apply(lineup_home, 1, Lineups_PasteSort)
-lineup_away_sorted <- apply(lineup_away, 1, Lineups_PasteSort)
-lineups_sorted     <- apply(lineups, 1, Lineups_PasteSort)
-
-#lineups
-df_lineups_sorted <- df_pbp %>%
-  mutate(lineup = lineups_sorted,
-    lineup_home = lineup_home_sorted,
-    lineup_away = lineup_away_sorted
-  ) %>% select(-contains("_player"))
-@
-
-\textbf{MERGE Temporada+game_code}
-
-Se modifica variable \emph{game\_code} para que quede categorizada con el mismo numero de caracteres. Y unimos \emph{Season} y \emph{Game\_Code} para tener una variable identificadora del partido.
-
-<<>>=
-df_merged <- df_lineups_sorted %>%
-  mutate(game_code = paste0("G", str_pad(game_code, 6, pad = "0")), 
-                     quarter   = paste0("Q", quarter)) %>%
-  unite("SeasonGame", c("season", "game_code"))
-@
-
-\textbf{Quintetos (Stints)}
-
-Queremos obtener un df con los quintetos identificados cada vez que se produce un cambio. Se dejaran aquellos que esten duplicados ya que es necesario diferenciarlos para posteriormente poder hacer el Mas/Menos correctamente. 
-
-<<>>=
-df_stints <- df_merged %>%
-  arrange(SeasonGame) %>%
-  mutate(StintChanged = (lineup != lag(lineup)),
-         StintChanged = replace_na(StintChanged, TRUE),
-         stint        = cumsum(StintChanged))
-
-df_reduced <- df_stints %>%
-  mutate(StintRemove  = (stint == lead(stint)),
-         StintRemove  = replace_na(StintRemove, FALSE)) %>%
-  filter(StintRemove != TRUE)
-@
-
-\textbf{Más/Menos}
-
-Obtenemos el Mas/Menos segun cada stint. Se tendrá en cuenta el cambio de partido.
-Además, esta variable estara hecha con HOME como referencia, pero eso no hace ninguna diferencia estadística importante en nuestro resultado final.
-
-
-<<>>=
-PlusMinus_function <- function(h,a){
-  (h-lag(h))-(a-lag(a))
-}
-
-#Home como referencia
-df_PlusMinus <- df_reduced %>%
-  group_by(SeasonGame) %>%
-  mutate(
-    stint_seconds = ifelse(is.na(lag(seconds)), seconds, seconds - lag(seconds)),
-    PlusMinus  = ifelse(is.na(lag(seconds)), points_home - points_away,
-                       PlusMinus_function(points_home, points_away))
-  ) %>% ungroup()
-
-df_PlusMinus_reduced <- df_PlusMinus %>% 
-  select(c(SeasonGame, quarter, lineup, lineup_home, lineup_away, stint_seconds, PlusMinus)) 
-
-#Eliminar stints duplicados
-df_PlusMinus_reduced_bylineups <- df_PlusMinus_reduced %>% 
-  group_by(SeasonGame, quarter, lineup, lineup_home, lineup_away) %>% 
-  summarise(
-    stint_seconds = sum(stint_seconds),
-    PlusMinus  = sum(PlusMinus) ) %>% 
-  ungroup() %>%
-  as.data.frame()
-@
-
-\subsection{PARTE 2: Dummys Jugadores}
-
-<<>>=
-#10min aprox
-df_dummys_H <- fastDummies::dummy_cols(df_PlusMinus_reduced_bylineups, 
-                                       select_columns = "lineup_home", 
-                                       split = "-")
-df_dummys_A <- fastDummies::dummy_cols(df_PlusMinus_reduced_bylineups, 
-                                       select_columns = "lineup_away", 
-                                       split = "-") %>% 
-                  mutate(across(starts_with("lineup_away_"), function(x) -x))
-
-Remove_firsts_chars_colnames <- function(data, char){
-  num_char <- nchar(char)+1
-  substring(names(data), num_char)
-}
-
-COL_From <- function(data, first_col){
-  last_col = ncol(data)
-  colnames(data[first_col:last_col])
-}
-
-COL_to <- function(data, first_col, char){
-  last_col = ncol(data)
-  Remove_firsts_chars_colnames(data[first_col:last_col], char)
-}
-
-#Primera columna con el nombre de un jugador
-match <- match(paste0("lineup_away_", players), names(df_dummys_A)) %>%
-            na.omit() %>%
-            min()
-
-#match = 8
-
-#nombre columnas sin primeras palabras:
-col_to_A <- COL_to(df_dummys_A, match, "lineup_away_")
-col_to_H <- COL_to(df_dummys_H, match, "lineup_home_")
-
-df_dummys_A <- df_dummys_A %>% rename_at(vars(COL_From(df_dummys_A,match)), function(x) col_to_A)
-df_dummys_H <- df_dummys_H %>% rename_at(vars(COL_From(df_dummys_H,match)), function(x) col_to_H)
-
-#Juntar los dos DF:
-df_dummys_A[df_dummys_A == 0] <- NA
-df_dummys_H[df_dummys_H == 0] <- NA
-
-df_dummys <- coalesce(df_dummys_H,df_dummys_A)
-df_dummys[is.na(df_dummys)] <- 0
-
-df_dummys <- df_dummys %>% select(-c(starts_with("lineup_"))) %>% ungroup()
-@
-
-Ahora mismo tenemos un DF con el PlusMinus con HOME como referencia (si es positivo, ganaban HOME. Si es Negativo ganaban AWAY). Luego tenemos variables "dummys" con $1$ si estaban jugando como HOME, $-1$ si estaban jugando como AWAY y $0$ si no estaban en pista.
-
-\subsection{PARTE 3: PlusMinus por stint (PlusMinus CLASSIC)}
-
-<<>>=
-df_dummys_PlusMinus <- df_dummys %>%
-  group_by(SeasonGame, quarter, lineup, stint_seconds) %>%
-  mutate(across(matches(players), function(x) x*PlusMinus)) %>%
-  select(-c(PlusMinus)) %>%
-  ungroup()
-
-### MasMenos de los mismos lineups (sin tener en cuenta SeasonGame o Quarter):
-
-df_dummys_PlusMinus_2 <- df_dummys_PlusMinus %>% select(-c(SeasonGame, quarter))
-
-PlusMinus_Lineups <- aggregate(. ~ lineup, df_dummys_PlusMinus_2, sum, na.rm = TRUE) %>%
-                     mutate(stint_seconds = Print_MS(stint_seconds))
-
-PlusMinus_Classic <- colSums(PlusMinus_Lineups[3:ncol(PlusMinus_Lineups)])
-
-PlusMinus_Classic_df <- as.data.frame(PlusMinus_Classic)
-
-PlusMinus_Classic_df <- PlusMinus_Classic_df %>%
-  mutate(Players = rownames(PlusMinus_Classic_df)) %>%
-  arrange(Players) %>%
-  select(Players, PlusMinus_Classic)
-  
-rownames(PlusMinus_Classic_df) <- NULL
-@
-
-Graficos:
-
-<<>>=
-ggplot(PlusMinus_Classic_df, aes(x=Players, y=PlusMinus_Classic, fill=Players)) +
-  geom_bar(stat="identity")+theme_minimal() + 
-  theme(axis.text.x = element_text(angle = 90, vjust = 0.5, hjust=1))
-
-## Este util para grupos pequeños de jugadores. Quizas seria util añadir variable equipo y hacer lo mismo pero por equipos.
-
-t<-table(PlusMinus_Classic); t
-
-plot(t)
-
-ggplot(PlusMinus_Classic_df, aes(x = PlusMinus_Classic)) +
-  stat_function(
-    fun = dnorm, 
-    args = with(PlusMinus_Classic_df, c(mean = mean(PlusMinus_Classic), 
-                                      sd = sd(PlusMinus_Classic)))
-  ) + scale_x_continuous("Más/Menos clásico")
-@
-
-\subsection{PARTE 4: Modelar}
-
-<<>>=
-df_dummys %>%
-select(stint_seconds) %>%
-  apply(1, function(x) x < 1) %>%
-  sum()
-
-#2072 entrades amb seconds=0. Mal recogidos los datos. No se tiene en cuenta segundos reales, sino minutos (60,120, 180...). por lo que al hacer la resta con la jugada anterior aparece 0.
-
-df_dummys2 <- df_dummys  
-df_dummys2$stint_seconds[df_dummys2$stint_seconds == 0] <- 30 
-#df_dummys2 <- df_dummys2 %>% drop_na()
-
-
-mod1 <- lm(PlusMinus ~ . -SeasonGame -quarter -lineup -stint_seconds, data=df_dummys)
-sum1  <- summary(mod1)
-coef1 <- as.data.frame(summary(mod1)$coefficients) %>%
-  arrange(Estimate)
-  
-mod2 <- lm(PlusMinus/stint_seconds ~ . -SeasonGame -quarter -lineup, data=df_dummys2)
-sum2  <- summary(mod2)
-coef2 <- as.data.frame(summary(mod2)$coefficients) %>%
-  arrange(Estimate)
-
-mod3 <- lm(PlusMinus/stint_seconds ~ . +lag(PlusMinus) -SeasonGame -quarter -lineup, 
-           data=df_dummys2)
-sum3  <- summary(mod3)
-coef3 <- as.data.frame(summary(mod3)$coefficients) %>%
-  arrange(Estimate)
-@
-
-\subsection{PARTE 5: HeatMap Correlaciones Jugadores}
-
-Primero vamos a preparar los datos con la estructura que necesitamos para crear el heatmap:
-
-
-<<>>=
-match_firstplayer <- match(players, names(df_dummys_PlusMinus)) %>%
-            na.omit() %>%
-            min()
-n <- dim(df_dummys_PlusMinus)[2]
-@
-
-
-<<>>=
-correlations <- round(cor(model.matrix(~.-1, data=df_dummys_PlusMinus[,match_firstplayer:n])), 5)
-
-corrplot(correlations, type = "upper", tl.col = "black", tl.srt = 90, tl.cex = 0.2)
-
-col<- colorRampPalette(c("red", "white", "blue"))(20)
-#heatmap(x = correlations, col = col, symm = TRUE)
-@
-
-\subsection{PARTE 6: Variance Inflation Factor (VIF)}
-<<>>=
-#vif(mod1)
-@
 
 
 \end{document}
